--- a/stories/ur/0001_ایک-بہت-قد-آدمی.html
+++ b/stories/ur/0001_ایک-بہت-قد-آدمی.html
@@ -56,14 +56,14 @@ Cornelius Gulere<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
 
-<p>اس کا دروازہ بہت کم تھا</p>
+<p>اس کا دروازہ بہت کم تھا.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 
-<p>اس کا بستر بہت مختصر تھا</p>
+<p>اس کا بستر بہت مختصر تھا.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Cornelius Gulere<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 
-<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا</p>
+<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
