--- a/stories/ur/0002_جانوروں-کو-دیکھو.html
+++ b/stories/ur/0002_جانوروں-کو-دیکھو.html
@@ -49,7 +49,7 @@ Jenny Katz<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
 
-<p>جانوروں کو دیکھو</p>
+<p>جانوروں کو دیکھو.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
