--- a/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے.html
+++ b/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے.html
@@ -49,14 +49,14 @@ Letta Machoga<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/02.jpg" /></p>
 
-<p>مجھے پڑھنا اچھا لگتا ہے</p>
+<p>مجھے پڑھنا اچھا لگتا ہے.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/03.jpg" /></p>
 
-<p>میں کون پڑھ سکتا ہوں</p>
+<p>میں کون پڑھ سکتا ہوں.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Letta Machoga<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/05.jpg" /></p>
 
-<p>میں کون پڑھ سکتا ہوں</p>
+<p>میں کون پڑھ سکتا ہوں.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Letta Machoga<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/07.jpg" /></p>
 
-<p>میں کون پڑھ سکتا ہوں</p>
+<p>میں کون پڑھ سکتا ہوں.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
