--- a/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں.html
+++ b/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
 
-<p>یہ خلائی ہے. وہ سات سال کی عمر ہے. اس کا نام اس کی زبان کا مطلب ہے، ‘لبوبیو’.</p>
+<p>یہ خلائی ہے. وہ سات سال کی عمر ہے. اس کا نام اس کی زبان کا مطلب ہے، “لبوبیو”.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
