--- a/stories/ur/0095_زاما-عظیم-ہے.html
+++ b/stories/ur/0095_زاما-عظیم-ہے.html
@@ -105,7 +105,7 @@ Michael Oguttu<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
 
-<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں</p>
+<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
