--- a/stories/ur/0095_زاما-عظیم-ہے_slides.html
+++ b/stories/ur/0095_زاما-عظیم-ہے_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
-<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں</p>
+<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں.</p>
 <center>
 <strong>9</strong>
 </center>
