--- a/stories/ur/0112_میرا-جسم.html
+++ b/stories/ur/0112_میرا-جسم.html
@@ -98,7 +98,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
 
-<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا</p>
+<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
