--- a/stories/ur/0129_سست-بھائی.html
+++ b/stories/ur/0129_سست-بھائی.html
@@ -91,7 +91,9 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
 
-<p>میں بہت مشکل کام کیوں کروں … … جب میرا بھائی کھیلنا مصروف ہے؟</p>
+<p>میں بہت مشکل کام کیوں کروں …</p>
+
+<p>… جب میرا بھائی کھیلنا مصروف ہے؟</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
