--- a/stories/ur/0141_چکن-اور-ملپڑ.html
+++ b/stories/ur/0141_چکن-اور-ملپڑ.html
@@ -126,7 +126,7 @@ Winny Asara<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
 
-<p>اس وقت سے، مرغوں اور ملپسیوں کے دشمن تھے</p>
+<p>اس وقت سے، مرغوں اور ملپسیوں کے دشمن تھے.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
