--- a/stories/ur/0210_ٹنگی-اور-گایوں.html
+++ b/stories/ur/0210_ٹنگی-اور-گایوں.html
@@ -63,7 +63,7 @@ Ingrid Schechter<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
 
-<p>ایک دن فوجی آئے</p>
+<p>ایک دن فوجی آئے.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
