--- a/stories/ur/0231_موسم-کی-کتاب_slides.html
+++ b/stories/ur/0231_موسم-کی-کتاب_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>تھنڈر ہے</p>
+<p>تھنڈر ہے.</p>
 <center>
 <strong>7</strong>
 </center>
