--- a/stories/ur/0243_دادی-کے-ساتھ-چھٹی.html
+++ b/stories/ur/0243_دادی-کے-ساتھ-چھٹی.html
@@ -77,7 +77,7 @@ Violet Otieno<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
 
-<p>باپ نے اوڈونگو اور اپیو اٹھایا کیونکہ وہ گاؤں میں پہنچ گئے. انہوں نے ان کی دادی ناری-کننیڈا پایا، ایک درخت کے نیچے چٹائی پر پائی. لو میں ناری-کننیڈا کا مطلب یہ ہے کہ ‘کینیڈا کے لوگوں کی بیٹی’. وہ ایک مضبوط اور خوبصورت عورت تھی.</p>
+<p>باپ نے اوڈونگو اور اپیو اٹھایا کیونکہ وہ گاؤں میں پہنچ گئے. انہوں نے ان کی دادی ناری-کننیڈا پایا، ایک درخت کے نیچے چٹائی پر پائی. لو میں ناری-کننیڈا کا مطلب یہ ہے کہ “کینیڈا کے لوگوں کی بیٹی”. وہ ایک مضبوط اور خوبصورت عورت تھی.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
