--- a/stories/ur/0262_مگزووی_slides.html
+++ b/stories/ur/0262_مگزووی_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
-<p>سٹریٹ کی زندگی مشکل تھا اور بہت سے لڑکوں نے روزانہ کھانے کے لۓ جدوجہد کی. کبھی کبھی انہیں گرفتار کیا گیا تھا، کبھی کبھی وہ مارے گئے تھے. جب وہ بیمار تھے تو مدد کرنے کے لئے کوئی بھی نہیں تھا. اس گروہ نے تھوڑا سا پیسہ لگایا تھا جو انھوں نے بھگوان، پلاسٹک اور دیگر ری سائیکلنگ فروخت کرنے سے حاصل کی. حریف گروپوں کے ساتھ لڑائیوں کی وجہ سے زندگی بھی زیادہ مشکل تھا جو شہر کے مختلف حصوں پر قابو پانے کے خواہاں تھے</p>
+<p>سٹریٹ کی زندگی مشکل تھا اور بہت سے لڑکوں نے روزانہ کھانے کے لۓ جدوجہد کی. کبھی کبھی انہیں گرفتار کیا گیا تھا، کبھی کبھی وہ مارے گئے تھے. جب وہ بیمار تھے تو مدد کرنے کے لئے کوئی بھی نہیں تھا. اس گروہ نے تھوڑا سا پیسہ لگایا تھا جو انھوں نے بھگوان، پلاسٹک اور دیگر ری سائیکلنگ فروخت کرنے سے حاصل کی. حریف گروپوں کے ساتھ لڑائیوں کی وجہ سے زندگی بھی زیادہ مشکل تھا جو شہر کے مختلف حصوں پر .قابو پانے کے خواہاں تھے</p>
 <center>
 <strong>4</strong>
 </center>
