--- a/stories/ur/0271_دو.html
+++ b/stories/ur/0271_دو.html
@@ -61,7 +61,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
 
-<p>لات مارنادو پاؤں</p>
+<p>لات مارنادو پاؤں.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -97,7 +97,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
 
-<p>دو بازو کو گلے لگانا</p>
+<p>دو بازو کو گلے لگانا.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
