--- a/stories/ur/0271_دو_slides.html
+++ b/stories/ur/0271_دو_slides.html
@@ -114,7 +114,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
-<p>لات مارنادو پاؤں</p>
+<p>لات مارنادو پاؤں.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -165,7 +165,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
-<p>دو بازو کو گلے لگانا</p>
+<p>دو بازو کو گلے لگانا.</p>
 <center>
 <strong>9</strong>
 </center>
