--- a/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا.html
+++ b/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا.html
@@ -49,7 +49,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
 
-<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، “ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو. وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں “.</p>
+<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، “ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو. وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں”.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,14 +63,14 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
 
-<p>آپ نے کیا کیا ہے؟ “وہ انڈے ایک کیک کے لئے تھا. کیک میری بہن کی شادی کے لئے تھا. شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟ “</p>
+<p>آپ نے کیا کیا ہے؟ “وہ انڈے ایک کیک کے لئے تھا. کیک میری بہن کی شادی کے لئے تھا. شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
 
-<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا. ایک نے کہا، “ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے والی چھڑی ہے.” ووسی نے اپنی سفر جاری رکھی</p>
+<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا. ایک نے کہا، “ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے .والی چھڑی ہے.” ووسی نے اپنی سفر جاری رکھی</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
 
-<p>آپ نے کیا کیا ہے؟ “یہ چھڑی میری بہن کے لئے تحفہ تھی. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟ “</p>
+<p>آپ نے کیا کیا ہے؟ “یہ چھڑی میری بہن کے لئے تحفہ تھی. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
 
-<p>آپ نے کیا کیا ہے؟ “یہ کہانی میری بہن کے لئے تحفہ تھا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟ “</p>
+<p>آپ نے کیا کیا ہے؟ “یہ کہانی میری بہن کے لئے تحفہ تھا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
 
-<p>“میں کیا کروں گا؟” ووسی نے روکا. “جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. “</p>
+<p>“میں کیا کروں گا؟” ووسی نے روکا. “جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
