--- a/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا_slides.html
+++ b/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
-<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، &quot;ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو. وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں &quot;.</p>
+<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، &quot;ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو. وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں&quot;.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
-<p>آپ نے کیا کیا ہے؟ &quot;وہ انڈے ایک کیک کے لئے تھا. کیک میری بہن کی شادی کے لئے تھا. شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟ &quot;</p>
+<p>آپ نے کیا کیا ہے؟ &quot;وہ انڈے ایک کیک کے لئے تھا. کیک میری بہن کی شادی کے لئے تھا. شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
-<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا. ایک نے کہا، &quot;ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے والی چھڑی ہے.&quot; ووسی نے اپنی سفر جاری رکھی</p>
+<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا. ایک نے کہا، &quot;ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے .والی چھڑی ہے.&quot; ووسی نے اپنی سفر جاری رکھی</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
-<p>آپ نے کیا کیا ہے؟ &quot;یہ چھڑی میری بہن کے لئے تحفہ تھی. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟ &quot;</p>
+<p>آپ نے کیا کیا ہے؟ &quot;یہ چھڑی میری بہن کے لئے تحفہ تھی. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>آپ نے کیا کیا ہے؟ &quot;یہ کہانی میری بہن کے لئے تحفہ تھا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟ &quot;</p>
+<p>آپ نے کیا کیا ہے؟ &quot;یہ کہانی میری بہن کے لئے تحفہ تھا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
-<p>&quot;میں کیا کروں گا؟&quot; ووسی نے روکا. &quot;جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. &quot;</p>
+<p>&quot;میں کیا کروں گا؟&quot; ووسی نے روکا. &quot;جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
