--- a/stories/ur/0296_ٹام-کیلے-بیچنے-والا.html
+++ b/stories/ur/0296_ٹام-کیلے-بیچنے-والا.html
@@ -84,7 +84,7 @@ Humphreys Odunga<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
 
-<p>لیکن ٹام ترک نہیں کرتا. وہ کہتے ہیں، “میری کیلے خریدیں! میری میٹھی پکا کیلے خریدیں! “</p>
+<p>لیکن ٹام ترک نہیں کرتا. وہ کہتے ہیں، “میری کیلے خریدیں! میری میٹھی پکا کیلے خریدیں!”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
