--- a/stories/ur/0315_ساکما-کا-گانا.html
+++ b/stories/ur/0315_ساکما-کا-گانا.html
@@ -84,7 +84,7 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
 
-<p>ساکما نے جواب دیا، “وہ ابھی آتے ہیں، ماں. میں نے انہیں اپنے سر میں سن لیا اور پھر میں گانا چاہتا ہوں. “</p>
+<p>ساکما نے جواب دیا، “وہ ابھی آتے ہیں، ماں. میں نے انہیں اپنے سر میں سن لیا اور پھر میں گانا چاہتا ہوں.”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -119,14 +119,14 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
 
-<p>“میں اس کے لئے گانا کر سکتا ہوں. ساکما نے اپنے والدین سے کہا کہ وہ دوبارہ خوش ہوں. لیکن اس کے والدین نے اسے مسترد کیا. “وہ بہت امیر ہے. آپ صرف ایک اندھے لڑکے ہیں. کیا آپ کو لگتا ہے کہ آپ کا گانا اس کی مدد کرے گا؟ “</p>
+<p>“میں اس کے لئے گانا کر سکتا ہوں. ساکما نے اپنے والدین سے کہا کہ وہ دوبارہ خوش ہوں. لیکن اس کے والدین نے اسے مسترد کیا. “وہ بہت امیر ہے. آپ صرف ایک اندھے لڑکے ہیں. کیا آپ کو لگتا ہے کہ آپ کا گانا اس کی مدد کرے گا؟”</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
 
-<p>تاہم، ساکما نے ترک نہیں کیا. اس کی چھوٹی بہن نے اس کی مدد کی. انہوں نے کہا، “ساکما کے گانے، نغمے مجھے بھوک لگی ہے جب میں بھوکا ہوں. وہ بھی امیر آدمی کو ضائع کرے گی. “</p>
+<p>تاہم، ساکما نے ترک نہیں کیا. اس کی چھوٹی بہن نے اس کی مدد کی. انہوں نے کہا، “ساکما کے گانے، نغمے مجھے بھوک لگی ہے جب میں بھوکا ہوں. وہ بھی امیر آدمی کو ضائع کرے گی.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -147,7 +147,7 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
 
-<p>کارکنوں نے جو کچھ کر رہے تھے اسے روک دیا. انہوں نے ساکما کا خوبصورت گانا سن لیا. لیکن ایک شخص نے کہا، “مالک مالک کو قابو پانے میں کامیاب نہیں ہو سکا. کیا یہ اندھا لڑکا لگتا ہے کہ وہ اسے کنسول کرے گا؟ “</p>
+<p>کارکنوں نے جو کچھ کر رہے تھے اسے روک دیا. انہوں نے ساکما کا خوبصورت گانا سن لیا. لیکن ایک شخص نے کہا، “مالک مالک کو قابو پانے میں کامیاب نہیں ہو سکا. کیا یہ اندھا لڑکا لگتا ہے کہ وہ اسے کنسول کرے گا؟”</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
