--- a/stories/pl/0296_tom-sprzedawca-bananów.html
+++ b/stories/pl/0296_tom-sprzedawca-bananów.html
@@ -45,7 +45,7 @@
 
 <h1 id="tom---sprzedawca-bananw">Tom - sprzedawca bananów</h1>
 
-Humphreys Odunga<br>English</div><div class="pagebreak">
+Humphreys Odunga<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
 
@@ -131,7 +131,7 @@ Humphreys Odunga<br>English</div><div class="pagebreak">
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Humphreys Odunga<br /><strong>Illustrations:</strong> Zablon Alex Nguku<br /><strong>Translation:</strong> Aleksandra Migorska<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Humphreys Odunga<br /><strong>Illustrations:</strong> Zablon Alex Nguku<br /><strong>Translation:</strong> Aleksandra Migorska<br /><strong>Language:</strong> Polish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/tom-banana-seller">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
