--- a/stories/pl/0296_tom-sprzedawca-bananów_slides.html
+++ b/stories/pl/0296_tom-sprzedawca-bananów_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="tom---sprzedawca-bananów-1">Tom - sprzedawca bananów</h2>
-<strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> English<br>
+<strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
