--- a/stories/ur/0001_ایک-بہت-قد-آدمی_slides.html
+++ b/stories/ur/0001_ایک-بہت-قد-آدمی_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>اس کا دروازہ بہت کم تھا</p>
+<p>اس کا دروازہ بہت کم تھا.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>اس کا بستر بہت مختصر تھا</p>
+<p>اس کا بستر بہت مختصر تھا.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا</p>
+<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا.</p>
 <center>
 <strong>6</strong>
 </center>
