--- a/stories/ur/0002_جانوروں-کو-دیکھو_slides.html
+++ b/stories/ur/0002_جانوروں-کو-دیکھو_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
-<p>جانوروں کو دیکھو</p>
+<p>جانوروں کو دیکھو.</p>
 <center>
 <strong>1</strong>
 </center>
