--- a/stories/ur/0003_اسکول-کے-کپڑے.html
+++ b/stories/ur/0003_اسکول-کے-کپڑے.html
@@ -70,7 +70,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
 
-<p>یہ بیلٹ ہے ..</p>
+<p>یہ بیلٹ ہے …</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
