--- a/stories/ur/0003_اسکول-کے-کپڑے_slides.html
+++ b/stories/ur/0003_اسکول-کے-کپڑے_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>یہ بیلٹ ہے ..</p>
+<p>یہ بیلٹ ہے ...</p>
 <center>
 <strong>4</strong>
 </center>
