--- a/stories/ur/0067_کھانا-پکانے.html
+++ b/stories/ur/0067_کھانا-پکانے.html
@@ -49,7 +49,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
 
-<p>میں آلو چھیلتا ہوں</p>
+<p>میں آلو چھیلتا ہوں.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
 
-<p>مکھن گری دار میوے کاٹ</p>
+<p>مکھن گری دار میوے کاٹ.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
