--- a/stories/ur/0067_کھانا-پکانے_slides.html
+++ b/stories/ur/0067_کھانا-پکانے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
-<p>میں آلو چھیلتا ہوں</p>
+<p>میں آلو چھیلتا ہوں.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
-<p>مکھن گری دار میوے کاٹ</p>
+<p>مکھن گری دار میوے کاٹ.</p>
 <center>
 <strong>5</strong>
 </center>
