--- a/stories/ur/0072_ہنیگوڈڈ-کا-بدلہ.html
+++ b/stories/ur/0072_ہنیگوڈڈ-کا-بدلہ.html
@@ -91,7 +91,7 @@ Zulu folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>لیکن، گینائل نے آگ نکال دیا، اس کے سپیئر اٹھایا اور گھر چلنے شروع کر دیا، پرندوں کو نظر انداز کر دیا. Ngede نے بدقسمتی سے کہا، “VIC torr! VIC torrr!” گنگیل روک دیا، چھوٹا سا پرندوں پر کھڑا ہوا اور زور سے چوری. “تم کچھ شہد چاہتے ہو، کیا آپ میرے دوست ہیں؟” لیکن میں نے سب کام کیا، اور تمام ڈھیر مل گئے. میں آپ کے ساتھ اس خوبصورت شہد کو کیوں شریک کروں؟ “ پھر وہ چلے گئے. Ngede غصہ تھا! اس کا علاج کرنے کا کوئی طریقہ نہیں تھا! لیکن وہ اس کا بدلہ لے گا.</p>
+<p>لیکن، گینائل نے آگ نکال دیا، اس کے سپیئر اٹھایا اور گھر چلنے شروع کر دیا، پرندوں کو نظر انداز کر دیا. Ngede نے بدقسمتی سے کہا، “VIC torr! VIC torrr!” گنگیل روک دیا، چھوٹا سا پرندوں پر کھڑا ہوا اور زور سے چوری. “تم کچھ شہد چاہتے ہو، کیا آپ میرے دوست ہیں؟ لیکن میں نے سب کام کیا، اور تمام ڈھیر مل گئے. میں آپ کے ساتھ اس خوبصورت شہد کو کیوں شریک کروں؟” پھر وہ چلے گئے. Ngede غصہ تھا! اس کا علاج کرنے کا کوئی طریقہ نہیں تھا! لیکن وہ اس کا بدلہ لے گا.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Zulu folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
 
-<p>گنگیل پر چڑھ گیا، سوچ رہا تھا کہ اس نے ہمیشہ معمولی بوجھ کیوں نہیں سنا. “شاید چھت درخت میں گہری ہے،” انہوں نے خود کو سوچا. اس نے خود کو ایک دوسری شاخ کھینچ دی. لیکن چھت کی بجائے، وہ ایک چیتے کے چہرے میں گھوم رہا تھا! چیف جسٹس نے اپنی نیند میں بہت ناراض تھا تاکہ اتنی بے حد مشکل ہو. اس نے اپنی آنکھوں کو تنگ کر دیا، اس کے منہ کو بہت بڑے اور بہت تیز دانتوں کو ظاہر کرنے کے لئے کھول دیا</p>
+<p>گنگیل پر چڑھ گیا، سوچ رہا تھا کہ اس نے ہمیشہ معمولی بوجھ کیوں نہیں سنا. “شاید چھت درخت میں گہری ہے،” انہوں نے خود کو سوچا. اس نے خود کو ایک دوسری شاخ کھینچ دی. لیکن چھت کی بجائے، وہ ایک چیتے کے چہرے میں گھوم رہا تھا! چیف جسٹس نے اپنی نیند میں بہت ناراض تھا تاکہ اتنی بے حد مشکل ہو. اس نے اپنی آنکھوں کو تنگ کر دیا، اس کے منہ کو بہت بڑے اور بہت تیز دانتوں کو ظاہر کرنے کے لئے کھول دیا.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
