--- a/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے_slides.html
+++ b/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/02.jpg" /></p>
-<p>مجھے پڑھنا اچھا لگتا ہے</p>
+<p>مجھے پڑھنا اچھا لگتا ہے.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/03.jpg" /></p>
-<p>میں کون پڑھ سکتا ہوں</p>
+<p>میں کون پڑھ سکتا ہوں.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/05.jpg" /></p>
-<p>میں کون پڑھ سکتا ہوں</p>
+<p>میں کون پڑھ سکتا ہوں.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/07.jpg" /></p>
-<p>میں کون پڑھ سکتا ہوں</p>
+<p>میں کون پڑھ سکتا ہوں.</p>
 <center>
 <strong>6</strong>
 </center>
