--- a/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں_slides.html
+++ b/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>یہ خلائی ہے. وہ سات سال کی عمر ہے. اس کا نام اس کی زبان کا مطلب ہے، 'لبوبیو'.</p>
+<p>یہ خلائی ہے. وہ سات سال کی عمر ہے. اس کا نام اس کی زبان کا مطلب ہے، &quot;لبوبیو&quot;.</p>
 <center>
 <strong>1</strong>
 </center>
