--- a/stories/ur/0112_میرا-جسم_slides.html
+++ b/stories/ur/0112_میرا-جسم_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
-<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا</p>
+<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا.</p>
 <center>
 <strong>8</strong>
 </center>
