--- a/stories/ur/0129_سست-بھائی_slides.html
+++ b/stories/ur/0129_سست-بھائی_slides.html
@@ -151,7 +151,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p>میں بہت مشکل کام کیوں کروں ... ... جب میرا بھائی کھیلنا مصروف ہے؟</p>
+<p>میں بہت مشکل کام کیوں کروں ...</p>
+<p>... جب میرا بھائی کھیلنا مصروف ہے؟</p>
 <center>
 <strong>7</strong>
 </center>
