--- a/stories/ur/0141_چکن-اور-ملپڑ_slides.html
+++ b/stories/ur/0141_چکن-اور-ملپڑ_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p>اس وقت سے، مرغوں اور ملپسیوں کے دشمن تھے</p>
+<p>اس وقت سے، مرغوں اور ملپسیوں کے دشمن تھے.</p>
 <center>
 <strong>12</strong>
 </center>
