--- a/stories/ur/0158_ہن-اور-ایگل.html
+++ b/stories/ur/0158_ہن-اور-ایگل.html
@@ -112,7 +112,7 @@ Ann Nduku<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>جیسا کہ ایگل کی ونگ کی سائے زمین پر گر جاتا ہے، ہن اپنی لڑکیوں کو خبردار کرتا ہے. “ننگے اور خشک زمین سے باہر نکلیں.” اور وہ جواب دیتے ہیں: “ہم بیوقوف نہیں ہیں. ہم چلیں گے. “</p>
+<p>جیسا کہ ایگل کی ونگ کی سائے زمین پر گر جاتا ہے، ہن اپنی لڑکیوں کو خبردار کرتا ہے. “ننگے اور خشک زمین سے باہر نکلیں.” اور وہ جواب دیتے ہیں: “ہم بیوقوف نہیں ہیں. ہم چلیں گے.”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
