--- a/stories/ur/0210_ٹنگی-اور-گایوں_slides.html
+++ b/stories/ur/0210_ٹنگی-اور-گایوں_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
-<p>ایک دن فوجی آئے</p>
+<p>ایک دن فوجی آئے.</p>
 <center>
 <strong>3</strong>
 </center>
