--- a/stories/ur/0231_موسم-کی-کتاب.html
+++ b/stories/ur/0231_موسم-کی-کتاب.html
@@ -91,7 +91,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
 
-<p>تھنڈر ہے</p>
+<p>تھنڈر ہے.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
