--- a/stories/ur/0243_دادی-کے-ساتھ-چھٹی_slides.html
+++ b/stories/ur/0243_دادی-کے-ساتھ-چھٹی_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>باپ نے اوڈونگو اور اپیو اٹھایا کیونکہ وہ گاؤں میں پہنچ گئے. انہوں نے ان کی دادی ناری-کننیڈا پایا، ایک درخت کے نیچے چٹائی پر پائی. لو میں ناری-کننیڈا کا مطلب یہ ہے کہ 'کینیڈا کے لوگوں کی بیٹی'. وہ ایک مضبوط اور خوبصورت عورت تھی.</p>
+<p>باپ نے اوڈونگو اور اپیو اٹھایا کیونکہ وہ گاؤں میں پہنچ گئے. انہوں نے ان کی دادی ناری-کننیڈا پایا، ایک درخت کے نیچے چٹائی پر پائی. لو میں ناری-کننیڈا کا مطلب یہ ہے کہ &quot;کینیڈا کے لوگوں کی بیٹی&quot;. وہ ایک مضبوط اور خوبصورت عورت تھی.</p>
 <center>
 <strong>5</strong>
 </center>
