--- a/stories/index.html
+++ b/stories/index.html
@@ -3484,6 +3484,12 @@
       <td><a name="pl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="/stories/pl/0262_magozwe_slides.html" target="_blank">Magozwe</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/pl/0271_para_slides.html" target="_blank">Para</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5633,7 +5639,7 @@
       <td>0262</td>
       <td><a href="http://africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0262">ar</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#pa0262">pa</a>, <a href="#tl0262">tl</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#ar0262">ar</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
