--- a/stories/index.html
+++ b/stories/index.html
@@ -1885,6 +1885,18 @@
       <td><a name="hi0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0002</td>
+      <td><a href="/stories/hi/0002_जानवरों-को-देखो_slides.html" target="_blank">जानवरों को देखो</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hi0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0004</td>
+      <td><a href="/stories/hi/0004_बकरी-कुत्ता-और-गाय_slides.html" target="_blank">बकरी, कुत्ता और गाय</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hi0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/hi/0087_मै-पढ़ना-चाहता-हूँ_slides.html" target="_blank">मैं पढ़ना चाहता हूँ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5219,7 +5231,7 @@
       <td>0002</td>
       <td><a href="http://africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0002">ar</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#ar0002">ar</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#hi0002">hi</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
@@ -5231,7 +5243,7 @@
       <td>0004</td>
       <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
