--- a/stories/ur/0006_انسیسی-اور-حکمت.html
+++ b/stories/ur/0006_انسیسی-اور-حکمت.html
@@ -56,7 +56,7 @@ Ghanaian folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>ایک دن، Nyame کا فیصلہ کیا ہے کہ وہ دانتوں کو دانتوں کو انانسی میں دے گا. ہر بار آنسی نے مٹی کے برتن میں دیکھا، اس نے کچھ نیا سیکھا. یہ بہت دلچسپ تھا!</p>
+<p>ایک دن، نیکی کا فیصلہ کیا ہے کہ وہ دانتوں کو دانتوں کو انانسی میں دے گا. ہر بار آنسی نے مٹی کے برتن میں دیکھا، اس نے کچھ نیا سیکھا. یہ بہت دلچسپ تھا!</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
