--- a/stories/ur/0066_نوزیل-اور-تین-بال.html
+++ b/stories/ur/0066_نوزیل-اور-تین-بال.html
@@ -105,7 +105,7 @@ Tessa Welch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
 
-<p>پھر کتا نے کہا، “میرے لئے بستر بنائیں!” Nozibele نے جواب دیا، “میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے.” “بستر بنائیں، یا میں تمہیں کاٹ دونگا!” کتا نے کہا. تو نوزیل نے بستر بنایا.</p>
+<p>پھر کتا نے کہا، “میرے لئے بستر بنائیں!” نوزیل نے جواب دیا، “میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے.” “بستر بنائیں، یا میں تمہیں کاٹ دونگا!” کتا نے کہا. تو نوزیل نے بستر بنایا.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Tessa Welch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
 
-<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا. “Nozibele، آپ کہاں ہیں؟” انہوں نے زور دیا. پہلے بال نے کہا “میں یہاں ہوں، بستر کے نیچے.” دوسرے بال نے کہا “میں یہاں، دروازے کے پیچھے ہوں”. تیسرے بال نے کہا “میں یہاں، کررا میں ہوں”.</p>
+<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا. “نوزیل، آپ کہاں ہیں؟” انہوں نے زور دیا. پہلے بال نے کہا “میں یہاں ہوں، بستر کے نیچے.” دوسرے بال نے کہا “میں یہاں، دروازے کے پیچھے ہوں”. تیسرے بال نے کہا “میں یہاں، کررا میں ہوں”.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
