--- a/stories/ur/0066_نوزیل-اور-تین-بال_slides.html
+++ b/stories/ur/0066_نوزیل-اور-تین-بال_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>پھر کتا نے کہا، &quot;میرے لئے بستر بنائیں!&quot; Nozibele نے جواب دیا، &quot;میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے.&quot; &quot;بستر بنائیں، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا. تو نوزیل نے بستر بنایا.</p>
+<p>پھر کتا نے کہا، &quot;میرے لئے بستر بنائیں!&quot; نوزیل نے جواب دیا، &quot;میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے.&quot; &quot;بستر بنائیں، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا. تو نوزیل نے بستر بنایا.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا. &quot;Nozibele، آپ کہاں ہیں؟&quot; انہوں نے زور دیا. پہلے بال نے کہا &quot;میں یہاں ہوں، بستر کے نیچے.&quot; دوسرے بال نے کہا &quot;میں یہاں، دروازے کے پیچھے ہوں&quot;. تیسرے بال نے کہا &quot;میں یہاں، کررا میں ہوں&quot;.</p>
+<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا. &quot;نوزیل، آپ کہاں ہیں؟&quot; انہوں نے زور دیا. پہلے بال نے کہا &quot;میں یہاں ہوں، بستر کے نیچے.&quot; دوسرے بال نے کہا &quot;میں یہاں، دروازے کے پیچھے ہوں&quot;. تیسرے بال نے کہا &quot;میں یہاں، کررا میں ہوں&quot;.</p>
 <center>
 <strong>12</strong>
 </center>
