--- a/stories/ur/0243_دادی-کے-ساتھ-چھٹی_slides.html
+++ b/stories/ur/0243_دادی-کے-ساتھ-چھٹی_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo اور Apiyo شہر میں ان کے والد کے ساتھ رہتے تھے. انہوں نے تعطیلات کو آگے بڑھا دیا. نہ صرف اس وجہ سے کہ اسکول بند تھا، لیکن اس وجہ سے وہ اپنی دادی سے ملنے گئے تھے. وہ ایک بڑا جھیل کے قریب ایک ماہی گیری گاؤں میں رہتا تھا.</p>
+<p>اوڈونگو اپیو شہر میں ان کے والد کے ساتھ رہتے تھے. انہوں نے تعطیلات کو آگے بڑھا دیا. نہ صرف اس وجہ سے کہ اسکول بند تھا، لیکن اس وجہ سے وہ اپنی دادی سے ملنے گئے تھے. وہ ایک بڑا جھیل کے قریب ایک ماہی گیری گاؤں میں رہتا تھا.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Odongo اور Apiyo حوصلہ افزائی کی وجہ سے ان کی دادی دوبارہ دور کرنے کا وقت تھا. رات سے پہلے، انہوں نے اپنے بیگ بھری اور اپنے گاؤں میں طویل سفر کے لئے تیار ہو گئے. وہ پوری رات چھٹی کے بارے میں سوتے اور بات نہیں کر سکے.</p>
+<p>اوڈونگو اور اپیو حوصلہ افزائی کی وجہ سے ان کی دادی دوبارہ دور کرنے کا وقت تھا. رات سے پہلے، انہوں نے اپنے بیگ بھری اور اپنے گاؤں میں طویل سفر کے لئے تیار ہو گئے. وہ پوری رات چھٹی کے بارے میں سوتے اور بات نہیں کر سکے.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>ناری-کنانی نے انہیں گھر میں خیر مقدم کیا اور کمرے کے ارد گرد خوشی کے ساتھ گانا شروع کیا. اس کے دادا نگار اس شہر کو لے کر اس پیشکش کو دینے کے لئے حوصلہ افزائی کرتے تھے. اوڈونگو نے کہا &quot;سب سے پہلے میرا تحفہ کھولیں.&quot; &quot;نہیں، میرا تحفہ سب سے پہلے!&quot; Apiyo نے کہا.</p>
+<p>ناری-کنانی نے انہیں گھر میں خیر مقدم کیا اور کمرے کے ارد گرد خوشی کے ساتھ گانا شروع کیا. اس کے دادا نگار اس شہر کو لے کر اس پیشکش کو دینے کے لئے حوصلہ افزائی کرتے تھے. اوڈونگو نے کہا &quot;سب سے پہلے میرا تحفہ کھولیں.&quot; &quot;نہیں، میرا تحفہ سب سے پہلے!&quot; اپیو نے کہا.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
-<p>پھر Odongo اور Apiyo باہر چلا گیا. انہوں نے تیتلیوں اور پرندوں کا پیچھا کیا.</p>
+<p>پھر اوڈونگو اور اپیو باہر چلا گیا. انہوں نے تیتلیوں اور پرندوں کا پیچھا کیا.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>Odongo اور Apiyo نے اپنی دادی کی مدد سے گھریلو کاموں کے ساتھ. انہوں نے پانی اور آگ کی لکڑی لائے. انہوں نے مرغوں سے انڈے کو جمع کیا اور باغ سے گرین اٹھایا.</p>
+<p>اوڈونگو اور اپیو نے اپنی دادی کی مدد سے گھریلو کاموں کے ساتھ. انہوں نے پانی اور آگ کی لکڑی لائے. انہوں نے مرغوں سے انڈے کو جمع کیا اور باغ سے گرین اٹھایا.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>یک صبح، Odongo نے اپنی دادی کی گاہوں کو اناج لے لیا. وہ پڑوسی کے فارم پر بھاگ گئے. کسان اوڈگو کے ساتھ ناراض تھا. انہوں نے اپنے فصلوں کو کھانے کے لئے گایوں کو رکھنے کے لئے دھمکی دی. اس دن کے بعد، لڑکے نے اس بات کو یقینی بنایا کہ گایوں کو دوبارہ تکلیف نہیں ملی.</p>
+<p>یک صبح، اوڈونگو نے اپنی دادی کی گاہوں کو اناج لے لیا. وہ پڑوسی کے فارم پر بھاگ گئے. کسان اوڈگو کے ساتھ ناراض تھا. انہوں نے اپنے فصلوں کو کھانے کے لئے گایوں کو رکھنے کے لئے دھمکی دی. اس دن کے بعد، لڑکے نے اس بات کو یقینی بنایا کہ گایوں کو دوبارہ تکلیف نہیں ملی.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>ایک اور دن، بچوں کو ناری-کننیڈا کے ساتھ بازار میں گیا. اس کے پاس سبزیوں، چینیوں اور صابن کی فروخت تھی. اپیو نے گاہکوں کو اشیاء کی قیمتوں کو بتانا پسند کیا. Odongo وہ اشیاء پیک کریں گے جنہوں نے گاہکوں کو خریدا.</p>
+<p>ایک اور دن، بچوں کو ناری-کننیڈا کے ساتھ بازار میں گیا. اس کے پاس سبزیوں، چینیوں اور صابن کی فروخت تھی. اپیو نے گاہکوں کو اشیاء کی قیمتوں کو بتانا پسند کیا. اوڈونگو وہ اشیاء پیک کریں گے جنہوں نے گاہکوں کو خریدا.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>Odongo اور Apiyo دونوں کو مضبوطی سے گلے لگایا اور الوداع کہا.</p>
+<p>اوڈونگو اور اپیو دونوں کو مضبوطی سے گلے لگایا اور الوداع کہا.</p>
 <center>
 <strong>19</strong>
 </center>
@@ -268,7 +268,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>جب Odongo اور Apiyo اسکول واپس چلا گیا تو انہوں نے اپنے دوستوں کو گاؤں میں زندگی کے بارے میں بتایا. کچھ بچوں نے محسوس کیا کہ شہر میں زندگی اچھی تھی. دوسروں نے محسوس کیا کہ گاؤں بہتر تھا. لیکن سب سے زیادہ، سب نے اتفاق کیا کہ اوڈگو اور اپیو ایک شاندار دادی تھی!</p>
+<p>جب اوڈونگو اور اپیو اسکول واپس چلا گیا تو انہوں نے اپنے دوستوں کو گاؤں میں زندگی کے بارے میں بتایا. کچھ بچوں نے محسوس کیا کہ شہر میں زندگی اچھی تھی. دوسروں نے محسوس کیا کہ گاؤں بہتر تھا. لیکن سب سے زیادہ، سب نے اتفاق کیا کہ اوڈگو اور اپیو ایک شاندار دادی تھی!</p>
 <center>
 <strong>20</strong>
 </center>
