--- a/stories/ur/0262_مگزووی.html
+++ b/stories/ur/0262_مگزووی.html
@@ -126,7 +126,7 @@ Lesley Koyi<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
 
-<p>Magozwe نے اس نئی جگہ کے بارے میں سوچا، اور اسکول جانے کے بارے میں. کیا اگر اس کا چاچا درست تھا اور وہ کچھ سیکھنے کے لئے بہت بیوقوف تھا؟ کیا وہ اس نئی جگہ پر انہیں شکست دے رہے ہیں؟ وہ ڈر رہا تھا. انہوں نے سوچا کہ “شاید یہ بہتر ہے کہ سڑک پر رہنے والے رہیں.”</p>
+<p>میگزووی نے اس نئی جگہ کے بارے میں سوچا، اور اسکول جانے کے بارے میں. کیا اگر اس کا چاچا درست تھا اور وہ کچھ سیکھنے کے لئے بہت بیوقوف تھا؟ کیا وہ اس نئی جگہ پر انہیں شکست دے رہے ہیں؟ وہ ڈر رہا تھا. انہوں نے سوچا کہ “شاید یہ بہتر ہے کہ سڑک پر رہنے والے رہیں.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
