--- a/stories/hi/0004_बकरी-कुत्ता-और-गाय_slides.html
+++ b/stories/hi/0004_बकरी-कुत्ता-और-गाय_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>مگزووی - Global African Storybook</title>
+  <title>बकरी, कुत्ता और गाय - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="مگزووی" class="slide level1">
-<h1>مگزووی</h1>
+<section id="बकर-कतत-और-गय" class="slide level1">
+<h1>बकरी, कुत्ता और गाय</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
-<p>مصروف شہر نروبی میں، گھر میں دیکھ بھال کی زندگی سے بہت دور، بے گھر لڑکوں کا ایک گروہ رہتا تھا. انہوں نے ہر روز جیسے ہی آنے کا خیر مقدم کیا. ایک صبح، لڑکوں کو سرد کے پاؤں پر سونے کے بعد اپنے میٹوں کو پیکنگ کر رہے تھے. سرد کو دور کرنے کے لئے انہوں نے گندگی سے آگ لگائی. لڑکوں کے گروپ مگزووی کے درمیان. وہ سب سے کم تھا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
+<p>बकरी, कुत्ता और गाय बहुत अच्छे दोस्त है। एक दिन वे टैक्सी में एक यात्रा पर गये।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
-<p>جب میگزوئی کے والدین کی وفات ہوئی تو وہ صرف پانچ سال کی تھی. وہ اپنے چچا کے ساتھ جارہا تھا. اس آدمی نے بچے کے بارے میں پرواہ نہیں کی. انہوں نے میگوزوی کافی خوراک نہیں دی. اس نے لڑکے کو بہت مشکل کام کیا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
+<p>जब वे अपनी यात्रा के अंत पर पहूँचे, तब टैक्सी चालक ने उन्हे अपना किराया देने के लिये कहा। गाय ने अपने किराया दिया।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
-<p>اگر مگزوے نے شکایت کی اور پوچھا، تو اس کا چاچا اسے مارا. جب مگزو نے پوچھا کہ اگر وہ سکول جا سکتا ہے، تو اس کا چچا نے اسے مارا اور کہا، &quot;تم کچھ سیکھنے کے لئے بہت بیوقوف ہو.&quot; اس علاج کے تین سال کے بعد مجوزوی اپنے چچا سے بھاگ گیا. اس نے سڑک پر رہنا شروع کر دیا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
+<p>कुत्ते ने थोड़ा ज़्यादा किराया दिया क्योकी उसके पास खुले पैसे नही थे।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
-<p>سٹریٹ کی زندگی مشکل تھا اور بہت سے لڑکوں نے روزانہ کھانے کے لۓ جدوجہد کی. کبھی کبھی انہیں گرفتار کیا گیا تھا، کبھی کبھی وہ مارے گئے تھے. جب وہ بیمار تھے تو مدد کرنے کے لئے کوئی بھی نہیں تھا. اس گروہ نے تھوڑا سا پیسہ لگایا تھا جو انھوں نے بھگوان، پلاسٹک اور دیگر ری سائیکلنگ فروخت کرنے سے حاصل کی. حریف گروپوں کے ساتھ لڑائیوں کی وجہ سے زندگی بھی زیادہ مشکل تھا جو شہر کے مختلف حصوں پر .قابو پانے کے خواہاں تھے</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
+<p>टैक्सी चालक कुत्ते को बाकी पैसे देने वाला था पर तभी बकरी पैसे दिये बिना भाग गयी।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
-<p>ایک روز جب مگزووی دھول کی کھدائیوں کے ذریعہ دیکھ رہے تھے، تو انہوں نے ایک پرانی تحریر کہانیاں کتاب ملی. اس نے اس سے گندگی کو صاف کیا اور اسے اپنی بوری میں ڈال دیا. اس کے بعد ہر دن وہ اس کتاب کو لے کر تصاویر پر لگے گا. وہ نہیں جانتا کہ الفاظ کیسے پڑھتے ہیں.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
+<p>टैक्सी चालक बहुत गुस्सा हूआ। वो कु्त्ते को बाकी पैसे दिये बिना चला गया।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
-<p>تصاویر نے ایک لڑکا کی کہانیاں بتائی ہیں جو پائلٹ بننے کے لئے تیار ہوئیں. میگزووی نے ایک پائلٹ ہونے کا خواب دیکھے گا. کبھی کبھی، اس نے سوچا کہ وہ کہانی میں لڑکا تھا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
+<p>इस कारण से अाज तक कुत्ता गाड़ी के पिछे भागता है ताकी वो उसके अन्दर देख सके और टैक्सी चालक को ढ़ूढ़ सके जिसने उसके बाकी पैसे देने है।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
-<p>یہ سرد تھا اور مجوزہ سڑک پر بھرا ہوا سڑک پر کھڑی تھی. ایک شخص اس کے پاس چلا گیا. &quot;ہیلو، میں تھامس ہوں. میں یہاں قریب کام کرتا ہوں، اس جگہ پر جہاں آپ کھانے کے لئے کچھ حاصل کر سکتے ہیں، &quot;آدمی نے کہا. انہوں نے نیلے چھت کے ساتھ ایک پیلے رنگ کے گھر کی طرف اشارہ کیا. &quot;مجھے امید ہے کہ آپ وہاں کچھ کھانا حاصل کرنے کے لئے جائیں گے؟&quot; میگزو نے آدمی کو اور پھر گھر میں دیکھا. &quot;شاید،&quot; انہوں نے کہا، اور دور چلے گئے.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
+<p>बकरी गाड़ी की आवाज सुनकर भाग जाती है। वो डरती है कि ऊसे किराया ना देने के लिये गिरफतार कर लिया जायेगा।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
-<p>اس کے بعد اس مہینے میں، بے گھر لڑکوں کو تھامس کے ارد گرد دیکھنے کے لئے استعمال کیا گیا تھا. انہوں نے لوگوں، خاص طور پر سڑکوں پر رہنے والے لوگوں سے بات کرنے کی خواہش کی. تھامس نے لوگوں کی زندگیوں کی کہانیاں سنائی. وہ سنجیدہ اور مریض تھا، کبھی غصے یا ناپسندیدہ نہیں. کچھ لڑکوں نے دوپہر میں کھانا حاصل کرنے کے لئے پیلے رنگ اور نیلا گھر جانے لگے.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
+<p>और गाय को गाड़ी के आने से कोई फर्क नही पड़ता। गाय अपना समय लेकर सड़क पार करती है क्योकि वो जानती है कि उसने अपना पूरा किराया दिया है।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,84 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
-<p>جب مقیم اس کے ساتھ بیٹھا تھا تو میگزووی اپنی تصویر کی کتاب کو دیکھ کر فرش پر بیٹھا تھا. تھامس سے پوچھا &quot;کیا اس بارے میں کہانی ہے؟&quot; مگزووی نے جواب دیا &quot;یہ ایک لڑکا ہے جو پائلٹ بن جاتا ہے.&quot; تھامس سے پوچھا &quot;کیا لڑکا کا نام ہے؟&quot; ماجزووی نے خاموشی سے کہا &quot;مجھے نہیں پتہ، میں پڑھ نہیں سکتا.&quot;</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
-<p>جب وہ ملاقات کی تو، مگزووی نے اپنی کہانی تھامس کو بتانے لگے. یہ اس کے چچا کی کہانی تھی اور کیوں بھاگ گیا. تھامس نے بہت بات نہیں کی، اور انہوں نے مجوزوی کو کیا کرنا نہیں بتایا تھا، لیکن وہ ہمیشہ احتیاط سے سنتے تھے. کبھی کبھی وہ بات کرتے وقت بات کریں گے جب انہوں نے نیلے چھت کے ساتھ گھر میں کھایا.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
-<p>میگزووی کی دسیں سالگرہ کے ارد گرد، تھامس نے انہیں ایک نئی کہانی کتاب دی. یہ ایک گاؤں کے لڑکے کے بارے میں ایک کہانی تھی جو مشہور فٹ بال کھلاڑی بن گئے تھے. تھامس نے کئی بار مگزووی کو اس کہانی کو پڑھا، جب تک کہ ایک دن انہوں نے کہا، &quot;میرا خیال ہے کہ آپ کا وقت یہ ہے کہ آپ اسکول گئے اور پڑھ سکیں. آپ کیا سوچتے ہیں؟ &quot;تھامس نے بتایا کہ وہ اس جگہ سے جانتا تھا جہاں بچے رہ سکتے ہیں، اور اسکول جاتے ہیں.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
-<p>میگزووی نے اس نئی جگہ کے بارے میں سوچا، اور اسکول جانے کے بارے میں. کیا اگر اس کا چاچا درست تھا اور وہ کچھ سیکھنے کے لئے بہت بیوقوف تھا؟ کیا وہ اس نئی جگہ پر انہیں شکست دے رہے ہیں؟ وہ ڈر رہا تھا. انہوں نے سوچا کہ &quot;شاید یہ بہتر ہے کہ سڑک پر رہنے والے رہیں.&quot;</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
-<p>انہوں نے تھامس کے ساتھ اپنے خوف کو شریک کیا. وقت کے ساتھ آدمی اس لڑکے کو یقین دلاتا تھا کہ زندگی نئی جگہ پر بہتر ہو سکتی ہے.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
-<p>اور اسی طرح مگزووی ایک گھر میں ایک سبز چھت کے ساتھ ایک کمرے میں منتقل ہوگئی. اس نے دو دوسرے لڑکوں کے ساتھ کمرے کا اشتراک کیا. مجموعی طور پر اس گھر میں رہنے والے دس بچوں تھے. چاچی Cissy اور اس کے شوہر کے ساتھ، تین کتوں، ایک بلی، اور ایک پرانے بکری.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
-<p>مگزوے نے اسکول شروع کیا اور یہ مشکل تھا. اسے پکڑنے کے لئے بہت کچھ تھا. کبھی کبھی اسے چھوڑنا چاہتا تھا. لیکن اس نے پائلٹ اور فٹ بال کے بارے میں کہانی کتابوں میں سوچا. ان کی طرح، وہ نہیں چھوڑ دیا.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
-<p>مگزووی اس گھر میں یارڈ میں بیٹھا تھا جسے سبز چھت کے ساتھ اسکول سے ایک کہانیاں کتاب پڑھ رہی تھی. تھامس آیا اور اس کے آگے بیٹھے. تھامس سے پوچھا &quot;کیا اس بارے میں کہانی ہے؟&quot; مگزووی نے کہا &quot;یہ ایک لڑکا ہے جو استاد بن جاتا ہے.&quot; تھامس سے پوچھا &quot;کیا لڑکا کا نام ہے؟&quot; مگنزوی نے ایک مسکراہٹ کے مطابق &quot;اس کا نام مگزووی ہے&quot;.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="مگزووی-1">مگزووی</h2>
-<strong>Text:</strong> Lesley Koyi<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<h2 id="बकर-कतत-और-गय-1">बकरी, कुत्ता और गाय</h2>
+<strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Marleen Visser<br> <strong>Translation:</strong> Tanvi Sirari<br> <strong>Language:</strong> Hindi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/magozwe-0'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/goat-dog-and-cow'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
