--- a/stories/it/0243_vacanze-con-la-nonna_slides.html
+++ b/stories/it/0243_vacanze-con-la-nonna_slides.html
@@ -268,7 +268,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>Quando Odongo e Apiyo tornarono a scuola, raccontarono i loro amici della vita nel villaggio. Alcuni bambini pensarono che la vita in città fosse bella. Altri pensarono che il villaggio fosse meglio. Ma soprattutto, tutti concordarono sul fatto che Odongo e Apiyo avessero una nonna fantastica!</p>
+<p>Quando Odongo e Apiyo tornarono a scuola, raccontarono ai loro amici della vita nel villaggio. Alcuni bambini pensarono che la vita in città fosse bella. Altri pensarono che il villaggio fosse meglio. Ma soprattutto, tutti concordarono sul fatto che Odongo e Apiyo avessero una nonna fantastica!</p>
 <center>
 <strong>20</strong>
 </center>
