--- a/stories/ur/0006_انسیسی-اور-حکمت_slides.html
+++ b/stories/ur/0006_انسیسی-اور-حکمت_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>ایک دن، Nyame کا فیصلہ کیا ہے کہ وہ دانتوں کو دانتوں کو انانسی میں دے گا. ہر بار آنسی نے مٹی کے برتن میں دیکھا، اس نے کچھ نیا سیکھا. یہ بہت دلچسپ تھا!</p>
+<p>ایک دن، نیکی کا فیصلہ کیا ہے کہ وہ دانتوں کو دانتوں کو انانسی میں دے گا. ہر بار آنسی نے مٹی کے برتن میں دیکھا، اس نے کچھ نیا سیکھا. یہ بہت دلچسپ تھا!</p>
 <center>
 <strong>2</strong>
 </center>
