--- a/stories/ur/0072_ہنیگوڈڈ-کا-بدلہ.html
+++ b/stories/ur/0072_ہنیگوڈڈ-کا-بدلہ.html
@@ -84,21 +84,21 @@ Zulu folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
 
-<p>Ngede خوشی سے سب کچھ دیکھا ہے کہ Gingile کر رہا تھا. وہ اس کا انتظار کر رہا تھا کہ شہد کی ایک چربی ٹکڑے کو چھوڑنے کے لۓ شین گائیڈ میں آپ کی پیشکش کی گئی. نئٹی نے شاخ سے شاخ سے قریب، زمین کے قریب اور قریب. آخر میں گنگیل درخت کے نچلے حصے میں پہنچ گیا. نئٹی نے لڑکے کے قریب ایک چٹان پر باندھا اور ان کے انعام کا انتظار کیا.</p>
+<p>نئٹی خوشی سے سب کچھ دیکھا ہے کہ گنگائل کر رہا تھا. وہ اس کا انتظار کر رہا تھا کہ شہد کی ایک چربی ٹکڑے کو چھوڑنے کے لۓ شین گائیڈ میں آپ کی پیشکش کی گئی. نئٹی نے شاخ سے شاخ سے قریب، زمین کے قریب اور قریب. آخر میں گنگیل درخت کے نچلے حصے میں پہنچ گیا. نئٹی نے لڑکے کے قریب ایک چٹان پر باندھا اور ان کے انعام کا انتظار کیا.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>لیکن، گینائل نے آگ نکال دیا، اس کے سپیئر اٹھایا اور گھر چلنے شروع کر دیا، پرندوں کو نظر انداز کر دیا. Ngede نے بدقسمتی سے کہا، “VIC torr! VIC torrr!” گنگیل روک دیا، چھوٹا سا پرندوں پر کھڑا ہوا اور زور سے چوری. “تم کچھ شہد چاہتے ہو، کیا آپ میرے دوست ہیں؟ لیکن میں نے سب کام کیا، اور تمام ڈھیر مل گئے. میں آپ کے ساتھ اس خوبصورت شہد کو کیوں شریک کروں؟” پھر وہ چلے گئے. Ngede غصہ تھا! اس کا علاج کرنے کا کوئی طریقہ نہیں تھا! لیکن وہ اس کا بدلہ لے گا.</p>
+<p>لیکن، گینائل نے آگ نکال دیا، اس کے سپیئر اٹھایا اور گھر چلنے شروع کر دیا، پرندوں کو نظر انداز کر دیا. نئٹی نے بدقسمتی سے کہا، “VIC torr! VIC torrr!” گنگیل روک دیا، چھوٹا سا پرندوں پر کھڑا ہوا اور زور سے چوری. “تم کچھ شہد چاہتے ہو، کیا آپ میرے دوست ہیں؟ لیکن میں نے سب کام کیا، اور تمام ڈھیر مل گئے. میں آپ کے ساتھ اس خوبصورت شہد کو کیوں شریک کروں؟” پھر وہ چلے گئے. نئٹی غصہ تھا! اس کا علاج کرنے کا کوئی طریقہ نہیں تھا! لیکن وہ اس کا بدلہ لے گا.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
 
-<p>ایک دن کئی ہفتوں کے بعد گنگیل نے دوبارہ ندی کی شہادت سنی. انہوں نے مزیدار شہد کو یاد کیا، اور ایک بار پھر پرندوں کی پیروی کی. جنگل کے کنارے کے ساتھ گنگائل کی قیادت کے بعد، نئٹی نے ایک چھتری کی چھت میں آرام سے روکا. “آہ،” گینائل نے سوچا. “چھت میں اس درخت میں ہونا ضروری ہے.” اس نے فوری طور پر اپنی چھوٹی آگ بنا دی اور اس کے دانتوں میں تمباکو نوشی شاخ چڑھنے لگے. Ngede بیٹھا اور دیکھا.</p>
+<p>ایک دن کئی ہفتوں کے بعد گنگیل نے دوبارہ ندی کی شہادت سنی. انہوں نے مزیدار شہد کو یاد کیا، اور ایک بار پھر پرندوں کی پیروی کی. جنگل کے کنارے کے ساتھ گنگائل کی قیادت کے بعد، نئٹی نے ایک چھتری کی چھت میں آرام سے روکا. “آہ،” گینائل نے سوچا. “چھت میں اس درخت میں ہونا ضروری ہے.” اس نے فوری طور پر اپنی چھوٹی آگ بنا دی اور اس کے دانتوں میں تمباکو نوشی شاخ چڑھنے لگے. نئٹی بیٹھا اور دیکھا.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Zulu folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
 
-<p>اس سے پہلے کہ چیتے گینائل میں ایک سوپ لگے ہو، اس نے درخت پھیلایا. اس کی جلدی میں انہوں نے ایک شاخ کھو دیا، اور زمین پر ایک بھاری انگوٹھی کے ساتھ زمین پر ان کی ٹخن گھومنے. انہوں نے جتنا جلدی بند کر دیا تھا. خوش قسمتی سے ان کے لئے، چیتے بھی اس کا پیچھا کرنے کے لئے بہت نیند تھی. نئٹی، ہنی گائیڈ، ان کا انتقام تھا. اور Gingile اس کے سبق سیکھا.</p>
+<p>اس سے پہلے کہ چیتے گینائل میں ایک سوپ لگے ہو، اس نے درخت پھیلایا. اس کی جلدی میں انہوں نے ایک شاخ کھو دیا، اور زمین پر ایک بھاری انگوٹھی کے ساتھ زمین پر ان کی ٹخن گھومنے. انہوں نے جتنا جلدی بند کر دیا تھا. خوش قسمتی سے ان کے لئے، چیتے بھی اس کا پیچھا کرنے کے لئے بہت نیند تھی. نئٹی، ہنی گائیڈ، ان کا انتقام تھا. اور گنگائل اس کے سبق سیکھا.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
