--- a/stories/ur/0210_ٹنگی-اور-گایوں.html
+++ b/stories/ur/0210_ٹنگی-اور-گایوں.html
@@ -49,7 +49,7 @@ Ingrid Schechter<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
 
-<p>Tingi اپنی دادی کے ساتھ رہتا تھا.</p>
+<p>ٹنگی اپنی دادی کے ساتھ رہتا تھا.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
