--- a/stories/ur/0210_ٹنگی-اور-گایوں_slides.html
+++ b/stories/ur/0210_ٹنگی-اور-گایوں_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
-<p>Tingi اپنی دادی کے ساتھ رہتا تھا.</p>
+<p>ٹنگی اپنی دادی کے ساتھ رہتا تھا.</p>
 <center>
 <strong>1</strong>
 </center>
